--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
 	</title>
 </head>
 <body>
+<div class="module one">
+	<ul>
+		<li>Line item1 </li>
+	</ul>
+</div>
 
-
+<div class="module two">
+	<ul>
+		<li>Line item2 </li>
+	</ul>
+</div>
 
 </body>
 </html>
